# atd

./: Makefile  atdk.opam  dune  dune-project
atdk/: Makefile
atdk/src/lib/: Codegen.ml  Codegen.mli  Kotlin_annot.ml  Kotlin_annot.mli  Python_annot.ml  dune
atdk/src/test/: Main.ml  dune
atdk/test/: dune
atdk/test/atd-input/: data_v2.atd  everything.atd
atdk/test/kotlin-expected/: everything.kt
atdk/test/kotlin-tests/: EverythingTest.kt  dune  run_test.sh
atdk/test/python-tests/: dune
scripts/: install-opam-dependencies
