;
; We test in two phases:
;
; 1. Check that the generated Kotlin code is what we expect.
;

(rule
 (alias runtest)
 (package atdk)
 (action
   (diff kotlin-expected/everything.kt
     kotlin-tests/everything.kt)))

; 2. Run the generated Kotlin code and check that is reads or writes JSON
;    data as expected.
;
; See kotlin-tests/dune
