;
; Convert ATD -> Kotiln
;
(rule
  (targets
    allcaps.kt
    everything.kt
  )
  (deps
    ../atd-input/ALLCAPS.atd
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdk} %{deps})))

;
; Typecheck and run the tests on the generated Kotlin code.
;
(rule
 (alias runtest)
 (package atdk)
 (deps
  everything.kt
  (glob_files *.kt))
 (action
  (progn
   (run kotlinc -version))))
