;
; Convert ATD -> Kotiln
;
(rule
  (targets
    everything.kt
  )
  (deps
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdk} %{deps})))

;
; Typecheck and run the tests on the generated Kotlin code.
;
(rule
 (alias runtest)
 (package atdk)
 (deps
  everything.kt
  (glob_files *.kt)
  (glob_files *.jar))
 (action (run ./run_test.sh)))
