;
; Convert ATD -> Kotiln
;
(rule
  (targets
    allcaps.kt
    everything.kt
  )
  (deps
    ../atd-input/ALLCAPS.atd
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdk} %{deps})))

;
; Typecheck and run the tests on the generated Kotlin code.
;
(rule
 (alias runtest)
 (package atdk)
 (deps
  everything.py
  (glob_files *.py))
 (action
  (progn
   (run python3 -m flake8 .)
   (run python3 -m mypy --strict .)
   (run python3 -m pytest .))))
